--- a/login .html
+++ b/login .html
@@ -251,28 +251,46 @@ td:hover {
 <table >
 
       <tr>
-        <th "col">#</th>
-        <th "col">First</th>
-        <th ">Last</th>
-        <th >Handle</th>
+        <th >Sites </th>
+        <th >Views </th>
+        <th ">Clicks</th>
+        <th >Average</th>
       </tr>
       <tr>
-        <th >1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <th >Google</th>
+        <td>9518</td>
+        <td>6369</td>
+        <td>01:32:50</td>
+      </tr>
+        <tr>
+        <th >Twitter</th>
+        <td>7326</td>
+        <td>10437</td>
+        <td>00:51:22</td>
+      </tr>
+     <tr>
+        <th >Amazon</th>
+        <td>4162</td>
+        <td>5327</td>
+        <td>00:24:34</td>
       </tr>
       <tr>
-        <th >2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <th >Linkedin</th>
+        <td>3654</td>
+        <td>2961</td>
+        <td>00:12:10</td>
       </tr>
-      <tr>
-        <th >3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
+       <tr>
+        <th >Codepen</th>
+        <td>2002</td>
+        <td>4135</td>
+        <td>00:46:19</td>
+      </tr>
+        <tr>
+        <th >Github</th>
+        <td>4623</td>
+        <td>3486</td>
+        <td>00:31:52</td>
       </tr>
   
 </table>
